# TradeMaster

./: .dockerignore  .env.integrated.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.original  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  docker-compose.extended.yml  enter-container-fixed.bat  enter-container.bat  manage-container.bat  pyproject.toml  requirements-docker.txt  requirements.txt  setup.py  start-container.bat  stop-container.bat
.claude/: index.json  settings.local.json
.claude/plan/: Docker部署修复任务.md  PowerShell重构任务.md  TradeMaster Web界面核心集成修复方案.md  Web界面后端服务报错修复任务.md  修复quick-start脚本.md  前后端深度集成方案.md  前后端网络连接修复任务.md  前端编码错误修复任务.md  双方案数据库集成.md  数据库连接修复任务.md  整合requirements文件.md
.claude/specs/frontend-backend-deep-integration/: 00-repository-context.md  requirements-confirm.md  requirements-spec.md
.github/workflows/: ci.yml  release.yml
configs/: CLAUDE.md
deploy/: CLAUDE.md  backend_service.py
docs/: ARCHITECTURE_GUIDE.md  BEST_PRACTICES_GUIDE.md  CLAUDE.md  CONFIGURATION_GUIDE.md  DOCKER_DEPLOYMENT_GUIDE.md  FAQ.md  QUICK_START_GUIDE.md  README.md  TROUBLESHOOTING_GUIDE.md
docs/development/: coding-standards.md  setup.md
finagent/: CLAUDE.md
frontend/public/: manifest.json
pm/: CLAUDE.md
scripts/: build-all.sh  dev-setup.sh  monitor.sh  performance-check.sh  security-check.sh  test-all.sh
specs/trademaster_web_ui/: README.md  architecture_summary.md  component_architecture_design.md  database_api_design.md  frontend_ui_ux_design.md  rpa.md  system_architecture_design.md
tools/: CLAUDE.md
tools/earnmore/: train.py
tools/finagent/: main.py
trademaster/: CLAUDE.md
trademaster/agents/: builder.py
trademaster/agents/order_execution/: eteo.py
trademaster/agents/portfolio_management/: deeptrader.py  eiie.py
trademaster/collector/: builder.py
trademaster/datasets/: __init__.py  builder.py
trademaster/datasets/algorithmic_trading/: dataset.py
trademaster/datasets/order_execution/: dataset.py
trademaster/datasets/portfolio_management/: dataset.py
trademaster/environments/: __init__.py  builder.py
trademaster/environments/algorithmic_trading/: environment.py
trademaster/environments/order_execution/: eteo_environment.py  pd_environment.py
trademaster/environments/portfolio_management/: deeptrader_environment.py  eiie_environment.py  environment.py  inverstor_imitator_environment.py  sarl_environment.py
trademaster/evaluation/market_dynamics_labeling/: builder.py
trademaster/imputation/: builder.py
trademaster/imputation/missing_value_imputation/: dataset.py
trademaster/losses/: __init__.py  builder.py
trademaster/nets/: __init__.py  builder.py
trademaster/optimizers/: builder.py
trademaster/preprocessor/: __init__.py  builder.py  custom.py
trademaster/trainers/: builder.py
trademaster/trainers/algorithmic_trading/: trainer.py
trademaster/trainers/order_execution/: eteo_trainer.py  pd_trainer.py
trademaster/trainers/portfolio_management/: deeptrader_trainer.py  eiie_trainer.py  investor_imitator_trainer.py  sarl_trainer.py  trainer.py
trademaster/transition/: __init__.py  builder.py  custom.py
trademaster/utils/: general_replay_buffer.py  utils.py
tutorial/: CLAUDE.md
web_interface/: .config-lock  .deploy-scheme  .env  .env.dev  .env.docker  .env.example  .env.prod  .env.prod.template  API_DOCUMENTATION.md  ARCHITECTURE.md  CLAUDE.md  DOCKER-DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_ROADMAP.md  PROJECT_SUMMARY.md  README.md  config-health-check.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.yml  manual_pg_setup.bat  quick-start.bat  quick-start.ps1  start-dev.bat  start-dev.sh  stop-services.bat  test-cors-fix.bat  test_pg_quick.bat  verify-cors-fix.py
web_interface/.claude/: settings.local.json
web_interface/backend/: .env  .env.development  .env.docker  .env.example  .env.native  .flake8  =0.10.7  DATABASE_MODELS_README.md  Makefile  README.md  STRATEGY_API_IMPLEMENTATION.md  alembic.ini  check_db.py  database_diagnostics.py  dev_main.py  fix_enum_values.py  fix_login.py  fix_password_hash.py  pytest.ini  pytest_simple.ini  requirements-docker-full.txt  requirements-docker.txt  requirements-installed.flag  requirements-lite.txt  requirements-minimal.txt  requirements.txt  simple_db_test.py  simple_main.py  start_backend.py  start_server.py  test_basic_api.py  test_db_simple.py  test_direct_connection.py  test_fixed_connection.py  test_login_api.py  test_simple_connection.py  test_sqlalchemy_engine.py  test_syntax.py  trademaster_web.db
web_interface/backend/alembic/: env.py  script.py.mako
web_interface/backend/app/: __init__.py  main.py
web_interface/backend/scripts/: dev.py  setup.py
web_interface/backend/tests/: README.md  SUMMARY.md  __init__.py  conftest.py  test_api_integration.py  test_auth.py  test_celery_tasks.py  test_configuration.py  test_end_to_end.py  test_runner.py  test_security_and_errors.py  test_trademaster_integration.py  test_websocket.py  validate_tests.py
web_interface/data/redis/: dump.rdb
web_interface/docker/backend/: Dockerfile  Dockerfile.base  db_test.py  entrypoint.sh  health-check.sh  (+1 more)
web_interface/docs/: BACKEND_SPECIFICATION.md  DATABASE_DESIGN.md  DEVELOPMENT_GUIDE.md  DOCKER_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FRONTEND_SPECIFICATION.md
web_interface/frontend/: .env  .env.development  .env.example  .env.local  .env.production.template  .eslintignore  .eslintrc.cjs  .eslintrc.json  .prettierrc  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
web_interface/scripts/: collect-logs.sh  db-manager.bat  deploy.sh  detect-and-start.bat  docker-health-monitor.ps1  docker-setup.bat  fix-docker-deployment.sh  health-check.sh  init-postgresql.sql  postgresql.conf  redis.conf  stop-services.sh  test-build.sh  test-db-connection.py  test-quick-start.bat  validate_env_config.py  verify-deployment.sh  windows-native-setup.bat
(+156 files in other folders)
